--- a/example/index.html
+++ b/example/index.html
@@ -1,178 +1,75 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>rowGrid.js Example</title>
-  <style>
-    body {
-      overflow-y: scroll;
-    }
-  
-    /* clearfix because of floats */
-    .container:before,
-    .container:after {
-      content: "";
-      display: table;
-    }
-    .container:after {
-      clear: both;
-    }
-    .item {
-      float: left;
-      margin-bottom: 15px;
-    }
-    .item img {
-      max-width: 100%;
-      max-height: 100%;
-      vertical-align: bottom;
-    }
-    .first-item {
-      clear: both;
-    }
-    /* remove margin bottom on last row */
-    .last-row, .last-row ~ .item {
-      margin-bottom: 0;
-    }
-  </style>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="../jquery.row-grid.js"></script>
-  <script>
-    $(document).ready(function(){
-      /* Start rowGrid.js */
-      $(".container").rowGrid({itemSelector: ".item", minMargin: 10, maxMargin: 25, firstItemClass: "first-item"});
-    });
-  </script>
+  <link rel="stylesheet" href="./index.css">
+  <link rel="preconnect" href="//lorempixel.com">
 </head>
+
 <body>
   <h1><a href="https://github.com/brunjo/rowGrid.js">rowGrid.js Example</a></h1>
-  <!-- Items with example images -->
   <div class="container">
     <div class="item">
-      <img src="http://lorempixel.com/220/200?1" width="220" height="200" />
+      <img src="http://lorempixel.com/120/100?1" width="120" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/180/200?2" width="180" height="200" />
+      <img src="http://lorempixel.com/100/100?2" width="100" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/250/200?3" width="250" height="200" />
+      <img src="http://lorempixel.com/130/100?3" width="130" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/200/200?4" width="200" height="200" />
+      <img src="http://lorempixel.com/100/100?4" width="100" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/240/200?5" width="240" height="200" />
+      <img src="http://lorempixel.com/110/100?5" width="110" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/210/200?6" width="210" height="200" />
+      <img src="http://lorempixel.com/90/100?6" width="90" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/200/200?7" width="200" height="200" />
+      <img src="http://lorempixel.com/100/100?7" width="100" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/190/200?8" width="190" height="200" />
+      <img src="http://lorempixel.com/90/100" width="90" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/260/200?9" width="260" height="200" />
+      <img src="http://lorempixel.com/150/100" width="150" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/220/200?10" width="220" height="200" />
+      <img src="http://lorempixel.com/120/100" width="120" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/200/200?11" width="200" height="200" />
+      <img src="http://lorempixel.com/130/100" width="130" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/170/200?12" width="170" height="200" />
+      <img src="http://lorempixel.com/140/100" width="140" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/280/200?13" width="280" height="200" />
+      <img src="http://lorempixel.com/120/100?13" width="120" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/220/200?14" width="220" height="200" />
+      <img src="http://lorempixel.com/140/100?14" width="140" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/240/200?15" width="240" height="200" />
+      <img src="http://lorempixel.com/80/100?15" width="80" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/180/200?16" width="180" height="200" />
+      <img src="http://lorempixel.com/120/100?16" width="120" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/200/200?17" width="200" height="200" />
+      <img src="http://lorempixel.com/110/100?17" width="110" height="100">
     </div>
     <div class="item">
-      <img src="http://lorempixel.com/210/200?18" width="210" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/200/200?19" width="200" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/190/200?20" width="190" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/260/200?21" width="260" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/220/200?22" width="220" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/220/200?1" width="220" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/180/200?2" width="180" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/250/200?3" width="250" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/200/200?4" width="200" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/240/200?5" width="240" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/210/200?6" width="210" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/200/200?7" width="200" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/190/200?8" width="190" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/260/200?9" width="260" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/220/200?10" width="220" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/200/200?11" width="200" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/170/200?12" width="170" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/280/200?13" width="280" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/220/200?14" width="220" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/240/200?15" width="240" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/180/200?16" width="180" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/200/200?17" width="200" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/210/200?18" width="210" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/200/200?19" width="200" height="200" />
-    </div>
-    <div class="item">
-      <img src="http://lorempixel.com/190/200?20" width="190" height="200" />
+      <img src="http://lorempixel.com/130/100?18" width="130" height="100">
     </div>
   </div>
+
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="./jquery.row-grid.js"></script>
+  <script src="./index.js"></script>
 </body>
+
 </html>
